fix(css): fix hover effect on mobile screen

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -26,8 +26,10 @@
   text-transform: uppercase;
 }
 
-.menu__link:hover {
-  opacity: 0.8;
+@media (hover: hover) {
+  .menu__link:hover {
+    opacity: 0.8;
+  }
 }
 
 .menu__ico-container {
