--- a/src/index.css
+++ b/src/index.css
@@ -38,22 +38,23 @@
   border-radius: 5px;
 }
 
+@media (hover: hover) {
+  .btn_red:hover {
+    color: rgba(255, 122, 111, 0.9);
+    background-color: #fff;
+    border-color: rgba(255, 122, 111, 0.9);
+  }
+  .btn_purple:hover {
+    color: #7378ec;
+    background-color: #fff;
+    border-color: #7378ec;
+  }
+}
+
 .btn_red {
   background-color: rgba(255, 122, 111, 0.9);
 }
 
-.btn_red:hover {
-  color: rgba(255, 122, 111, 0.9);
-  background-color: #fff;
-  border-color: rgba(255, 122, 111, 0.9);
-}
-
 .btn_purple {
   background-color: #7378ec;
-}
-
-.btn_purple:hover {
-  color: #7378ec;
-  background-color: #fff;
-  border-color: #7378ec;
 }
